Make the Template Customizable

--- a/dev/index.html
+++ b/dev/index.html
@@ -7,7 +7,17 @@
 </head>
 <body>
 
-  <wc-resume src="sample.json"></wc-resume>
+  <wc-resume src="sample.json">
+    <contact></contact>
+    <about></about>
+    <profiles></profiles>
+    <skills></skills>
+    <work></work>
+    <projects></projects>
+    <education></education>
+    <awards></awards>
+    <interests></interests>
+  </wc-resume>
 
 </body>
 </html>
