--- a/dev/test/about.html
+++ b/dev/test/about.html
@@ -1,6 +1,8 @@
+<h2>About</h2>
 <table>
-    <tr>
-      <td>Summary</td>
-      <td>${summary}</td>
-    </tr>
-  </table>
+  <tr>
+    <td>Summary</td>
+    <td>${summary}</td>
+  </tr>
+</table>
+<hr>
