--- a/dev/test/awards.html
+++ b/dev/test/awards.html
@@ -1,3 +1,4 @@
+<h2>Awards</h2>
 ${awards.map(award => `
   <table>
     <tr>
@@ -18,3 +19,4 @@ ${awards.map(award => `
     </tr>
   </table>
 `).join('\n\n')}
+<hr>
