--- a/dev/test/contact.html
+++ b/dev/test/contact.html
@@ -1,46 +1,48 @@
+<h2>Contact</h2>
 <table>
-    <tr>
-      <td>Name</td>
-      <td>${name}</td>
-    </tr>
-    <tr>
-      <td>Label</td>
-      <td>${label}</td>
-    </tr>
-    <tr>
-      <td>Image</td>
-      <td>${image}</td>
-    </tr>
-    <tr>
-      <td>Email</td>
-      <td>${email}</td>
-    </tr>
-    <tr>
-      <td>Phone</td>
-      <td>${phone}</td>
-    </tr>
-    <tr>
-      <td>Website</td>
-      <td>${url}</td>
-    </tr>
-    <tr>
-      <td>Address</td>
-      <td>${location.address}</td>
-    </tr>
-    <tr>
-      <td>PostalCode</td>
-      <td>${location.postalCode}</td>
-    </tr>
-    <tr>
-      <td>City</td>
-      <td>${location.city}</td>
-    </tr>
-    <tr>
-      <td>Region</td>
-      <td>${location.region}</td>
-    </tr>
-    <tr>
-      <td>Country</td>
-      <td>${location.countryCode}</td>
-    </tr>
-  </table>
+  <tr>
+    <td>Name</td>
+    <td>${name}</td>
+  </tr>
+  <tr>
+    <td>Label</td>
+    <td>${label}</td>
+  </tr>
+  <tr>
+    <td>Image</td>
+    <td>${image}</td>
+  </tr>
+  <tr>
+    <td>Email</td>
+    <td>${email}</td>
+  </tr>
+  <tr>
+    <td>Phone</td>
+    <td>${phone}</td>
+  </tr>
+  <tr>
+    <td>Website</td>
+    <td>${url}</td>
+  </tr>
+  <tr>
+    <td>Address</td>
+    <td>${location.address}</td>
+  </tr>
+  <tr>
+    <td>PostalCode</td>
+    <td>${location.postalCode}</td>
+  </tr>
+  <tr>
+    <td>City</td>
+    <td>${location.city}</td>
+  </tr>
+  <tr>
+    <td>Region</td>
+    <td>${location.region}</td>
+  </tr>
+  <tr>
+    <td>Country</td>
+    <td>${location.countryCode}</td>
+  </tr>
+</table>
+<hr>
