--- a/dev/test/languages.html
+++ b/dev/test/languages.html
@@ -1,3 +1,4 @@
+<h2>Languages</h2>
 <table>
   <tr>
     <th>Language</th>
@@ -6,7 +7,8 @@
   ${languages.map(language => `
     <tr>
       <td>${language.language}</td>
-      <td>${language.fluency}</td>    
+      <td>${language.fluency}</td>
     </tr>
   `).join('\n')}
 </table>
+<hr>
