--- a/dev/test/publications.html
+++ b/dev/test/publications.html
@@ -1,3 +1,4 @@
+<h2>Publications</h2>
 ${publications.map(publication => `
   <table>
     <tr>
@@ -22,3 +23,4 @@ ${publications.map(publication => `
     </tr>
   </table>
 `).join('\n\n')}
+<hr>
