--- a/dev/test/interests.html
+++ b/dev/test/interests.html
@@ -1,12 +1,14 @@
+<h2>Interests</h2>
 <table>
+  <tr>
+    <th>Name</th>
+    <th>Keywords</th>
+  </tr>
+  ${interests.map(interest => `
     <tr>
-      <th>Name</th>
-      <th>Keywords</th>
+      <td>${interest.name}</td>
+      <td>${interest.keywords.join(', ')}</td>
     </tr>
-    ${interests.map(interest => `
-      <tr>
-        <td>${interest.name}</td>
-        <td>${interest.keywords.join(', ')}</td>    
-      </tr>
-    `).join('\n')}
-  </table>
+  `).join('\n')}
+</table>
+<hr>
