--- a/dev/test/profiles.html
+++ b/dev/test/profiles.html
@@ -1,3 +1,4 @@
+<h2>Profiles</h2>
 <table>
   <tr>
     <th>Network</th>
@@ -7,8 +8,9 @@
   ${profiles.map(profile => `
     <tr>
       <td>${profile.network}</td>
-      <td>${profile.username}</td>    
+      <td>${profile.username}</td>
       <td>${profile.url}</td>
     </tr>
   `).join('\n')}
 </table>
+<hr>
