Move 'test' Template

--- a/dev/index.html
+++ b/dev/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <wc-resume src="sample.json" template="test"></wc-resume>
+  <wc-resume src="sample.json" template="../templates/test/"></wc-resume>
 
 </body>
 </html>
