--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script type="module" src="https://cdn.jsdelivr.net/npm/@vanillawc/wc-demo@1.1.5/index.min.js"></script>
-  <script type="module" src="https://cdn.jsdelivr.net/npm/@vanillawc/wc-resume@/index.min.js"></script>
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@vanillawc/wc-resume/index.js"></script>
 </head>
 <body>
 
