--- a/dev/index.html
+++ b/dev/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   <script type="module" src="../src/wc-resume.js"></script>
 </head>
 <body>
 
-  <wc-resume src="sample.json" template="../templates/positive/"></wc-resume>
+  <wc-resume src="sample.json" theme="../themes/positive/"></wc-resume>
 
 </body>
 </html>
