--- a/demo/index.html
+++ b/demo/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script type="module" src="https://cdn.jsdelivr.net/npm/@vanillawc/wc-demo@1.1.5/index.min.js"></script>
-  <script type="module" src="https://cdn.jsdelivr.net/npm/@vanillawc/wc-resume@1.0.2/index.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>WC-Resume - Demos</title>
 </head>
 <body>
-
-<wc-demo title="WC-Resume" link="https://github.com/vanillawc/wc-resume" desc="Basic Usage" src="assets/demo.sample"></wc-demo>
-
+  <h1>WC-Resume</h1>
+  <ul>
+    <li><a href="src-attribute.html">'src' Attribute</a></li>
+    <li><a href="theme-attribute.html">'theme' Attribute</a></li>
+  </ul>
 </body>
 </html>
