--- a/demo/src-attribute.html
+++ b/demo/src-attribute.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script type="module" src="https://cdn.jsdelivr.net/npm/@vanillawc/wc-demo@1.1.5/index.min.js"></script>
-  <script type="module" src="https://cdn.jsdelivr.net/npm/@vanillawc/wc-resume@2.0.1/index.js"></script>
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@vanillawc/wc-demo@latest/index.min.js"></script>
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@vanillawc/wc-resume@latest/index.min.js"></script>
 </head>
 <body>
 
