Install and Use 'interpolate-es'

--- a/dev/index.html
+++ b/dev/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
-  <script type="module" src="../src/wc-resume.js"></script>
+  <script type="module" src="../dist/wc-resume.js"></script>
 </head>
 <body>
 
