--- a/themes/compact/profiles.html
+++ b/themes/compact/profiles.html
@@ -1,18 +1,7 @@
-${profiles.map(profile => {
-  if (profile.network.toLowerCase() === 'twitter') {
-    return `
-      <div>
-        <i class="fa fa-lg fa-twitter"></i>
-        ${profile.username}
-      </div>
-    `;
-  }
-  if (profile.network.toLowerCase() === 'soundcloud') {
-    return `
-      <div>
-        <span class="fa fa-lg fa-soundcloud"></span>
-        ${profile.username}
-      </div>
-    `;
-  }
-}).join('\n')}
+${profiles.map(profile => `
+  <div>
+    <i class="fa fa-lg fa-${profile.network.toLowerCase()}"></i>
+    ${profile.url ? `<span><a href="${profile.url}">${profile.username}</a></span>` : ''}
+    ${!profile.url ? `<span>${profile.username}</span>` : ''}
+  </div>
+`).join('\n')}
