--- a/themes/compact/contact.html
+++ b/themes/compact/contact.html
@@ -1,6 +1,6 @@
 <div class="name"><h1>${name}</h1></div>
 <div class="contacts">
-  <div><a href="mailto:${email}">${email}</a></div>
-  <div>${phone}</div>
-  <div><a href="${url}">${url}</a></div>
+  ${ email ? `<div><a href="mailto:${email}">${email}</a></div>` : '' }
+  ${ phone ? `<div>${phone}</div>` : '' }
+  ${ url ? `<div><a href="${url}">${url}</a></div>` : '' }
 </div>
