--- a/themes/compact/languages.html
+++ b/themes/compact/languages.html
@@ -1,5 +1,8 @@
 <hr>
 <h2><i class="fa fa-lg fa-language"></i>Languages</h2>
 ${languages.map(language => `
-  ${language.language} - ${language.fluency}
+  <div>
+    <span>${language.language}</span>
+    <span>${language.fluency ? `- ${language.fluency}` : ''}</span>
+  </div>
 `)}
