--- a/themes/compact/publications.html
+++ b/themes/compact/publications.html
@@ -5,10 +5,10 @@ ${publications.map(publication => `
     <div class="name">
       <h3>
       <span><a href="${publication.url}">${publication.name}</a></span>
-      <span> - ${publication.publisher}</span>
+      ${publication.publisher ? `<span> - ${publication.publisher}</span>` : ''}
     </h3>
     </div>
-    <div class="dates">${publication.releaseDate}</div>
+    ${publication.releaseDate ? `<div class="dates">${publication.releaseDate}</div>` : ''}
   </div>
-  <div>${publication.summary}</div>
+  ${publication.summary ? `<div>${publication.summary}</div>` : ''}
 `)}
