--- a/themes/compact/skills.html
+++ b/themes/compact/skills.html
@@ -4,7 +4,9 @@
   ${skills.map(skill => `
     <tr>
       <td>${skill.name}</td>
-      <td>${skill.keywords.join('  ')}</td>
+      ${skill.keywords ? `
+        <td>${skill.keywords.join('  ')}</td>
+      `: ''}
     </tr>
   `).join('\n')}
 </table>
