--- a/themes/positive/languages.html
+++ b/themes/positive/languages.html
@@ -3,7 +3,7 @@
   ${languages.map(language => `
     <tr>
       <td>${language.language}</td>
-      <td>${language.fluency}</td>
+      ${language.fluency ? `<td>${language.fluency}</td>` : ''}
     </tr>
   `).join('\n')}
 </table>
