--- a/themes/positive/publications.html
+++ b/themes/positive/publications.html
@@ -5,11 +5,11 @@
       <div class="name">
         <h3>
         <span><a href="${publication.url}">${publication.name}</a></span>
-        <span> - ${publication.publisher}</span>
+        ${publication.publisher ? `<span> - ${publication.publisher}</span>` : ''}
       </h3>
       </div>
-      <div class="dates">${publication.releaseDate}</div>
+      ${publication.releaseDate ? `<div class="dates">${publication.releaseDate}</div>` : ''}
     </div>
-    <div>${publication.summary}</div>
+    ${publication.summary ? `<div>${publication.summary}</div>` : ''}
   `)}
 </section>
