--- a/themes/positive/skills.html
+++ b/themes/positive/skills.html
@@ -3,7 +3,7 @@
   ${skills.map(skill => `
     <tr>
       <td>${skill.name}</td>
-      <td>${skill.keywords.join('  ')}</td>
+      ${skill.keywords ? `<td>${skill.keywords.join('  ')}</td>` : ''}
     </tr>
   `).join('\n')}
 </table>
