--- a/themes/positive/work.html
+++ b/themes/positive/work.html
@@ -3,16 +3,17 @@
   ${jobs.map(job => `
     <div class="header">
       <div class="name">
-        <h3>${job.position}, <a href="${job.url}">${job.name}</a></h3>
+        <h3>${job.position ? `${job.position}, ` : ''}<a href="${job.url}">${job.name}</a></h3>
       </div>
       <div class="dates">${job.startDate} - ${job.endDate}</div>
     </div>
-    <div>${job.description}</div>
-    <ul class="highlights">
-      ${job.highlights.map(highlight => `
-        <li>${highlight}</li>
-      `).join('\n')}
-    </ul>
+    ${ job.description ? `<div>${job.description}</div>` : '' }
+    ${ job.highlights ? `
+      <ul class="highlights">
+        ${job.highlights.map(highlight => `
+          <li>${highlight}</li>
+        `).join('\n')}
+      </ul>` : '' }
   </div>
   `)}
 </section>
