--- a/themes/compact/awards.html
+++ b/themes/compact/awards.html
@@ -11,4 +11,4 @@ ${awards.map(award => `
     ${award.date ? `<div class="dates">${award.date}</div>` : ''}
   </div>
   ${award.summary ? `<div>${award.summary}</div>` : ''}
-`)}
+`).join('\n')}
