--- a/themes/compact/languages.html
+++ b/themes/compact/languages.html
@@ -5,4 +5,4 @@ ${languages.map(language => `
     <span>${language.language}</span>
     <span>${language.fluency ? `- ${language.fluency}` : ''}</span>
   </div>
-`)}
+`).join('\n')}
