--- a/themes/compact/projects.html
+++ b/themes/compact/projects.html
@@ -28,4 +28,4 @@ ${projects.map(project => `
     <div class="keywords">${project.keywords.join(', ')}</div>
   ` : ''}
 </div>
-`)}
+`).join('\n')}
