--- a/themes/compact/references.html
+++ b/themes/compact/references.html
@@ -5,4 +5,4 @@ ${references.map(reference => `
     <p>${reference.reference}</p>
     <footer>— <cite>${reference.name}</cite></footer>
   </blockquote>
-`)}
+`).join('\n')}
