--- a/themes/positive/awards.html
+++ b/themes/positive/awards.html
@@ -11,5 +11,5 @@
       ${award.date ? `<div class="dates">${award.date}</div>` : ''}
     </div>
     ${award.summary ? `<div>${award.summary}</div>` : ''}
-  `)}
+  `).join('\n')}
 </section>
