--- a/themes/positive/projects.html
+++ b/themes/positive/projects.html
@@ -23,5 +23,5 @@
     ` : ''}
     ${project.keywords ? `<div class="keywords">${project.keywords.join(', ')}</div>` : ''}
   </div>
-  `)}
+  `).join('\n')}
 </section>
