--- a/themes/positive/publications.html
+++ b/themes/positive/publications.html
@@ -11,5 +11,5 @@
       ${publication.releaseDate ? `<div class="dates">${publication.releaseDate}</div>` : ''}
     </div>
     ${publication.summary ? `<div>${publication.summary}</div>` : ''}
-  `)}
+  `).join('\n')}
 </section>
