--- a/themes/positive/references.html
+++ b/themes/positive/references.html
@@ -5,5 +5,5 @@
       <p>${reference.reference}</p>
       <footer>— <cite>${reference.name}</cite></footer>
     </blockquote>
-  `)}
+  `).join('\n')}
 </section>
