--- a/dev/index.html
+++ b/dev/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <wc-resume src="multiple.json"></wc-resume>
+  <wc-resume src="sample.json" theme="../themes/positive/"></wc-resume>
 
 </body>
 </html>
